<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="title_activity_lol">LOLActivity</string>
    <string name="action_playlist">action_playlist</string>
    <string name="action_add_playlist">add</string>
    <string name="action_del_playlist">del</string>
    <string name="action_edit_playlist">edit</string>
    <string name="last">last</string>
    <string name="next">next</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="find">find</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="song">song</string>
    <string name="artist">artist</string>
    <string name="album">album</string>
    <string name="add_to_list">add_to_list</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="mode">mode</string>

</resources>
