<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.tiiime.lplayer.activity.LOLActivity">
    <item android:id="@+id/action_add" android:title="@string/action_add_playlist"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_edit" android:title="@string/action_edit_playlist"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_del" android:title="@string/action_del_playlist"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
